@@ -34,6 +34,7 @@ Bugs fixed:
 - 2832552 Memory leak in classProviderGz.c
 - 2835364 No check for lcov when code coverage is enabled.
 - 2531949 GetInstance call ends up with SIGSEGV when Released
+- 2860163 Missing commRead error checks
 
 Changes in 1.3.4
 ================
